ENABLE_TESTING()

SET( UNIT_TESTS basic_test )
project ( CXX )

foreach( TEST ${UNIT_TESTS} )

  SET( TEST_MAIN_CPP ${CMAKE_CURRENT_SOURCE_DIR}/${TEST})
  SET_SOURCE_FILES_PROPERTIES(${TEST_MAIN_CPP} PROPERTIES LANGUAGE CXX)
  LIST( APPEND TEST_SOURCES ${TEST_MAIN_CPP})

  ADD_EXECUTABLE(${TEST} ${TEST_SOURCES})

  TARGET_LINK_LIBRARIES( ${TEST}
    ${GTEST_BOTH_LIBRARIES}
    ${GTEST_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT}
  )

  ADD_TEST(${TEST} ${TEST})

  ADD_CUSTOM_COMMAND(
    TARGET ${TEST}
    COMMENT "Running ${TEST}"
    POST_BUILD
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
    COMMAND ${TEST} )

endforeach(TEST)

